--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jasmine": "^2.8.0",
     "protractor": "^5.2.2",
     "selenium-webdriver": "^3.6.0",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "winston-daily-rotate-file": "^1.7.2"
   }
 }
