--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "upwd": "webdriver-manager update",
     "wd": "webdriver-manager start",
-    "test": "protractor ./conf.js --suite all",
+    "test": "protractor ./conf.js --suite checkbox",
     "expl": "protractor --elementExplorer"
   },
   "author": "",
@@ -15,6 +15,7 @@
     "faker": "^4.1.0",
     "jasmine": "^2.8.0",
     "protractor": "^5.2.2",
+    "request": "^2.83.0",
     "selenium-webdriver": "^3.6.0",
     "winston": "^2.4.0",
     "winston-daily-rotate-file": "^1.7.2"
