--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "spec.js",
   "scripts": {
-    "upwd": "webdriver-manager update",
     "wd": "webdriver-manager start",
     "test": "protractor ./conf.js --suite all",
-    "expl": "protractor --elementExplorer"
+    "expl": "protractor --elementExplorer",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "jasmine": "^2.8.0",
     "protractor": "^5.2.2",
     "request": "^2.83.0",
+    "require-dir": "^0.3.2",
     "selenium-webdriver": "^3.6.0",
     "winston": "^2.4.0",
     "winston-daily-rotate-file": "^1.7.2"
