--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "spec.js",
   "scripts": {
+    "upwd": "webdriver-manager update",
     "wd": "webdriver-manager start",
     "test": "protractor ./conf.js --suite all",
-    "expl": "protractor --elementExplorer",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "expl": "protractor --elementExplorer"
   },
   "author": "",
   "license": "ISC",
